<resources>
    <string name="app_name">HazeMaze</string>

    <string name="backToMenu">Back to menu</string>
    <string name="game_name">HazeMaze</string>
    <string name="version">0.0.8</string>

    <string name="title_activity_game_window">GameWindow</string>
    <string name="butt_rotLeft">rot L</string>
    <string name="butt_rotRight">rot R</string>
    <string name="prompt">-</string>
    <string name="conclusion">Conclusion</string>
    <string name="title_activity_conclusion">conclusion</string>
    <string name="steps">Steps taken: </string>
    <string name="size">Maze size: </string>
    <string name="timeNeeded">Time elapsed: </string>


    <string name="title_activity_info">InfoActivity</string>
    <string name="info_text">
        This amasing Game was first created by the amasing JunkerW. \n
        He got the amasing luck to be help by the amasing Carole. \n
        Cool, cool cool cool.
    </string>

    <string name="title_activity_single_game_setting">SingleGameSettingActivity</string>

    <string name="startSingleGame">Enter</string>


    <string name="messRotLeft">You rotate left</string>
    <string name="messRotRight">You rotate right</string>
    <string name="messWalk">You make a step forward</string>
    <string name="messExit">You found the Exit</string>
    <string name="messWall">Wall</string>
    <string name="messEntr">You are back at the Start</string>
    <string name="saved_high_score_key">high_score</string>
    <string name="highscore_text">You\'ve never been faster!</string>

</resources>
