<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".GameWindow">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <TextView
        android:id="@+id/textLine1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_prompt"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/text_prompt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/prompt"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fullscreen_content_controls"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/butt_rotLeft"
            style="?metaButtonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/butt_rotLeft" />

        <ImageButton
            android:id="@+id/butt_straight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/arrow_up_float" />

        <Button
            android:id="@+id/butt_rotRight"
            style="?metaButtonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/butt_rotRight" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>